--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <img id="cat" src="https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492__340.jpg">
+    <img id="cat" src="https://thumbs.dreamstime.com/b/crazy-cat-tongue-hanging-out-40087599.jpg">
   </div>
   <script src="main.js"></script>
 </body>
